# car-lookup-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  requirements.txt  setup.cfg  tox.ini
.github/workflows/: deploy.yaml
car_lookup_bot/: bot.py  car_info_readers.py  exam_tickets.py  settings.py  subscriptions.py
car_lookup_bot/impls/car_repo/: in_memory_repo.py  redis_repo.py
car_lookup_bot/impls/subs_repo/: in_memory_repo.py  redis_repo.py
car_lookup_bot/impls/ticket_repo/: in_memory_repo.py  redis_repo.py
infra/: docker-compose.yaml
tests/: conftest.py
tests/integration/: test_simple.py
