[metadata]
name = car-lookup-bot
classifiers =
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",

[options]
zip_safe = False
python_requires = >=3.11
include_package_data = True
packages = find:
platforms = any
install_requires =
    pydantic==2.3.0
    pydantic_settings==2.0.3
    beautifulsoup4==4.12.2
    httpx==0.25.0
    aiogram==3.1.1
    redis==4.6.0


[options.extras_require]
dev =
    mypy==1.4.1
    pre-commit==3.3.3
    pytest==7.4.0
    pytest-asyncio==0.21.1
    pytest-cov==4.1.0
    pytest-randomly==3.13.0
    polyfactory==2.7.0
    tox==4.6.4
    watchfiles==0.19.0
    types-beautifulsoup4==4.12.0.6

[options.entry_points]
console_scripts =
    car-lookup-bot = car_lookup_bot.bot:main

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile = black
combine_as_imports = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore:.*pkg_resources.declare_namespace.*:DeprecationWarning

[coverage:run]
branch = True
source = car_lookup_bot

[mypy]
plugins = pydantic.mypy
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = normal
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-redis.*]
ignore_missing_imports = true
